Fix another bug in dark mode

--- a/application/basilisk/themes/windows/browser.css
+++ b/application/basilisk/themes/windows/browser.css
@@ -5241,6 +5241,9 @@ toolbar[brighttext] #close-button:hover:active {
 :root[data-theme="dark"] #PanelUI-popup toolbarbutton[cui-areatype="menu-panel"] > .toolbarbutton-icon,
 :root[data-theme="dark"] #PanelUI-popup toolbarbutton[panel-multiview-anchor="true"] > .toolbarbutton-icon,
 :root[data-theme="dark"] #PanelUI-popup #zoom-controls > toolbarbutton > .toolbarbutton-icon,
+:root[data-theme="dark"] #widget-overflow toolbarbutton[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+:root[data-theme="dark"] #widget-overflow toolbarbutton[panel-multiview-anchor="true"] > .toolbarbutton-icon,
+:root[data-theme="dark"] #widget-overflow #zoom-controls > toolbarbutton > .toolbarbutton-icon,
 :root[data-theme="dark"] #PanelUI-popup #PanelUI-fxa-icon > .toolbarbutton-icon,
 :root[data-theme="dark"] #PanelUI-popup #PanelUI-customize > .toolbarbutton-icon,
 :root[data-theme="dark"] #PanelUI-popup #PanelUI-help > .toolbarbutton-icon,
@@ -5248,6 +5251,9 @@ toolbar[brighttext] #close-button:hover:active {
 #main-window[lwtheme-brighttext] #PanelUI-popup toolbarbutton[cui-areatype="menu-panel"] > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup toolbarbutton[panel-multiview-anchor="true"] > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup #zoom-controls > toolbarbutton > .toolbarbutton-icon,
+#main-window[lwtheme-brighttext] #widget-overflow toolbarbutton[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+#main-window[lwtheme-brighttext] #widget-overflow toolbarbutton[panel-multiview-anchor="true"] > .toolbarbutton-icon,
+#main-window[lwtheme-brighttext] #widget-overflow #zoom-controls > toolbarbutton > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup #PanelUI-fxa-icon > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup #PanelUI-customize > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup #PanelUI-help > .toolbarbutton-icon,
@@ -5255,6 +5261,9 @@ toolbar[brighttext] #close-button:hover:active {
 toolbar[brighttext] #PanelUI-popup toolbarbutton[cui-areatype="menu-panel"] > .toolbarbutton-icon,
 toolbar[brighttext] #PanelUI-popup toolbarbutton[panel-multiview-anchor="true"] > .toolbarbutton-icon,
 toolbar[brighttext] #PanelUI-popup #zoom-controls > toolbarbutton > .toolbarbutton-icon,
+toolbar[brighttext] #widget-overflow toolbarbutton[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+toolbar[brighttext] #widget-overflow toolbarbutton[panel-multiview-anchor="true"] > .toolbarbutton-icon,
+toolbar[brighttext] #widget-overflow #zoom-controls > toolbarbutton > .toolbarbutton-icon,
 toolbar[brighttext] #PanelUI-popup #PanelUI-fxa-icon > .toolbarbutton-icon,
 toolbar[brighttext] #PanelUI-popup #PanelUI-customize > .toolbarbutton-icon,
 toolbar[brighttext] #PanelUI-popup #PanelUI-help > .toolbarbutton-icon,
